--- a/src/components/player/player.module.css
+++ b/src/components/player/player.module.css
@@ -2,4 +2,13 @@
   max-width: 1280px;
   max-height: 720px;
   border: none;
+  position: relative;
+  z-index: -1;
+}
+
+.video::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
