--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: antiquewhite;
+  background-color: antiquewhite;  
 }
 
 code {
@@ -20,6 +20,10 @@ p,
 ul {
   margin: 0;
   padding: 0;
+}
+
+:root {
+  --blue-color: #86D3F4;
 }
 
 @font-face {
