feat: добавил валидацию

--- a/src/components/baner/baner.module.css
+++ b/src/components/baner/baner.module.css
@@ -1,5 +1,5 @@
 .baner {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   row-gap: 20px;
@@ -15,6 +15,7 @@
 }
 
 .baner_visible {  
+  display: flex;
   right: 0;  
 }
 
