--- a/src/components/panel/panel.module.css
+++ b/src/components/panel/panel.module.css
@@ -127,11 +127,18 @@
   cursor: pointer;
 }
 
-.number_btn:hover, .number_btn:focus {
+.number_btn:not(:disabled):hover,
+.number_btn:not(:disabled):focus {
   background-color: #000;
   color: #fff;
   transition: .3s;
 }
+
+.number_btn:disabled {
+  border: 2px solid #4E4E4E;
+  color: #4E4E4E;
+}
+
 
 .agreement {
   display: flex;
