--- a/src/components/panel/panel.module.css
+++ b/src/components/panel/panel.module.css
@@ -1,6 +1,7 @@
 .panel {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 13px;
   position: absolute;
   left: -380px;
